--- a/modulo03-produtividade-com-angular/css/card.css
+++ b/modulo03-produtividade-com-angular/css/card.css
@@ -4,3 +4,68 @@
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
+body {
+  background: url(/modulo03-produtividade-com-angular/assests/bg-repeat.jpg);
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  background-color: #550400;
+}
+
+.menu li {
+  margin: 0 10px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #A99877;
+  font-size: 18px;
+  display: inline-block;
+  padding: 10px;
+}
+
+.menu a:hover {
+  color: #ffffff;
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  max-width: 100%;
+  height: 523px;
+  margin: 5px 0 10px 0;
+}
+
+.banner-content {
+  position: relative;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.home-banner-background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.banner-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 2;
+  }
