--- a/modulo03-produtividade-com-angular/06-single-page-application-com-angular/Diretivas/diretivas-project/src/app/card/card.component.html
+++ b/modulo03-produtividade-com-angular/06-single-page-application-com-angular/Diretivas/diretivas-project/src/app/card/card.component.html
@@ -3,9 +3,7 @@
 <button>Hello World</button>
 
 <ul>
-  <li *ngFor="let p of produtos; let i = index"
-    (click)="remover (i)"
-  >
+  <li *ngFor="let p of produtos; let i = index" (click)="remover (i)">
     {{ i }} - {{ p }}
   </li>
   <button (click)="adicionar()">Adicionar</button>
@@ -27,9 +25,9 @@
     </ul>
   </div>
   <div *ngSwitchCase="'superuser'">
-      <li> editar perfil</li>
-      <li> adicionar cartão</li>
-      <li> gerenciar usuários</li>
-      <li> gerenciar admins</li>
+    <li> editar perfil</li>
+    <li> adicionar cartão</li>
+    <li> gerenciar usuários</li>
+    <li> gerenciar admins</li>
   </div>
 </div>
